--- a/src/main/resources/static/corp/applicant/applicant.css
+++ b/src/main/resources/static/corp/applicant/applicant.css
@@ -78,7 +78,7 @@ main {
 }
 
 .search-btn {
-	padding: 8px 16px;
+	padding: 8px 12px;
 	background-color: #007bff;
 	color: white;
 	border: none;
@@ -176,7 +176,7 @@ main {
 
 select[name="postingTitle"] {
   min-width: 250px; /* 최소 너비 지정 */
-  max-width: 500px; /* 최대 너비 제한 */
+  max-width: 250px; /* 최대 너비 제한 */
   white-space: nowrap; /* 텍스트 줄바꿈 안 함 */
   overflow: hidden; /* 넘치는 텍스트 숨기기 */
   text-overflow: ellipsis; /* 말줄임표 처리 */
@@ -314,13 +314,35 @@ select[name="postingTitle"] {
 	cursor: not-allowed;
 }
 
-.col-resume {
+.invisible-btn {
+	visibility: hidden;
+}
+
+.col-resume.active {
 	width: 20%;
 	cursor: pointer; /* 🔹 마우스 포인터 손가락 모양 */
 	transition: color 0.2s ease;
 }
 
-.col-resume:hover {
+.col-resume.active:hover {
 	color: #007bff; /* 🔹 링크처럼 파란색 */
 	text-decoration: underline; /* 🔹 밑줄로 링크 느낌 */
+}
+
+.no-results {
+  padding: 40px 0;
+  text-align: center;
+  font-size: 18px;
+  color: #666;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #ddd;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+}
+
+.col-resume,
+.col-position {
+	white-space: nowrap;        /* 줄바꿈 안 함 */
+	overflow: hidden;           /* 넘치는 건 숨김 */
+	text-overflow: ellipsis;   /* 말줄임표로 표시 */
 }
