--- a/src/main/resources/templates/corp/applicant/applicant_resume.html
+++ b/src/main/resources/templates/corp/applicant/applicant_resume.html
@@ -18,7 +18,7 @@
 				<div class="section-title">기본정보</div>
 				<div class="basic-info">
 					<div class="profile-image">
-						<img th:src="@{/images/profileImg/{img}(img=${resume.image})}" alt="프로필 사진">
+						<img th:if="${resume.image}" th:src="@{/images/profileImg/{img}(img=${resume.image})}" alt="프로필 사진">
 					</div>
 					<div class="info-details">
 						<div class="name" th:text="${resumeUser.name}"></div>
@@ -26,7 +26,7 @@
 							<div class="contact-item" th:text="|✉ ${resumeUser.email}|"></div>
 							<div class="phone-birth">
 								<span th:text="|📞 ${resumeUser.phone}|"></span> 
-								<span th:text="|📅 ${resumeUser.birth}|"></span>
+								<span th:text="|📅 ${resumeUser.birth}년생|"></span>
 							</div>
 						</div>
 					</div>
