--- a/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
@@ -687,7 +687,7 @@ function isValidStdEdd(){
                     
                     <div class="form-group">
                         <label class="form-label required">채용공고 상세 내용</label>
-                        <textarea name="postingDetail" id="postingDetail" class="form-textarea" rows="12" placeholder="📌 주요 업무
+                        <textarea name="postingDetail" id="postingDetail" class="form-textarea" rows="12" wrap="on" placeholder="📌 주요 업무
 - 담당하게 될 구체적인 업무 내용을 작성해주세요
 - 프로젝트 성격, 사용 기술, 협업 방식 등을 포함해주세요
 
