--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -520,7 +520,7 @@ function isForYou(){
 	});
 }
 
-//10000개 유저 데이터 넣기
+//1000개 유저 데이터 넣기
 function addTenThousandUsers(){
 	const familyName = ["김", "신", "이", "주", "유", "박", "서", "한", "하"];
 	const lastName1 = ["가", "나", "다", "라", "마", "바", "사", "아", "자", "차", "카", "타", "파", "하"];
@@ -540,12 +540,15 @@ function addTenThousandUsers(){
 
 		// 주소
 		let zipcode = Math.floor(Math.random() * 90000) + 10000;
-		let roadAddress = "서울시 강남구 테헤란로 132";
+		let roadAddressList = ["서울시 강남구","경기도 수원시","인천시 남동구","부산시 해운대구","대구시 수성구","광주시 북구","대전시 유성구","울산시 남구",
+			"세종시 조치원읍","강원도 춘천시","경상남도 창원시","경상북도 포항시","전라남도 여수시","전라북도 전주시","충청남도 천안시","충청북도 청주시","제주도 제주시"];
+
+		let roadAddress = roadAddressList[Math.floor(Math.random() * roadAddressList.length)];
 		let detailAddress = `${num()}${num()}-${num()}${num()}`;
 
 		// 이메일 / 비밀번호
-		let email = `testUser${i}@test.com`;
-		let password = `Testuser${i}`;
+		let email = `testuser${i}@test.com`;
+		let password = `Testuser${i}!`;
 
 		// 생일
 		let birth = `200${num()}-0${num()}-25`;
