주현석 db ip 변경

--- a/src/main/resources/templates/user/mypage/mail_list.html
+++ b/src/main/resources/templates/user/mypage/mail_list.html
@@ -58,7 +58,7 @@
 								<button class="toolbar-btn" id="markUnreadBtn">안읽음처리</button>
 								<button class="toolbar-btn danger" id="deleteBtn">삭제</button>
 								<div class="searchbox">
-									<input type="text" th:value="${search.keyword}" name="keyword" placeholder="메일 검색...">
+									<input type="text" th:value="${search.keyword}" id="keyword" name="keyword" placeholder="메일 검색...">
 									<i id="search" class="fas fa-search search-icon"></i>
 								</div>
 							</div>
