--- a/src/main/resources/templates/user/mypage/mail_list.html
+++ b/src/main/resources/templates/user/mypage/mail_list.html
@@ -27,16 +27,19 @@
 						<div class="stats-item" data-filter="all">
 							<div class="stats-label">전체 메일</div>
 							<div class="stats-number" id="total-count"
+								th:attr="data-total=${statistics.total}"
 								th:text="${statistics.total}">7</div>
 						</div>
 						<div class="stats-item" data-filter="unread">
 							<div class="stats-label">안읽은 메일</div>
 							<div class="stats-number" id="unread-count"
+							th:attr="data-total=${statistics.unread}"
 								th:text="${statistics.unread}">5</div>
 						</div>
 						<div class="stats-item" data-filter="read">
 							<div class="stats-label">읽은 메일</div>
 							<div class="stats-number" id="read-count"
+							th:attr="data-total=${statistics.read}"
 								th:text="${statistics.read}">2</div>
 						</div>
 						<div class="stats-item" data-filter="offered">
