--- a/src/main/resources/templates/user/job_posting/review.html
+++ b/src/main/resources/templates/user/job_posting/review.html
@@ -327,7 +327,7 @@ h4 {
         <span class="score_number">3.9</span>
         <span class="stars">⭐⭐⭐⭐☆</span>
       </div>
-      <button type="button" class="write_review_btn">리뷰 작성</button>
+      <a th:href="@{/user/job_posting/review_write}" class="write_review_btn">리뷰 작성</a>
     </div>
   </div>
 </div>
